--- a/source/sass/blocks/catalog-extra.scss
+++ b/source/sass/blocks/catalog-extra.scss
@@ -15,6 +15,7 @@
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 245px;
     grid-gap: 80px;
+    margin-bottom: 86px;
   }
 }
 
