--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -33,10 +33,6 @@
   }
 }
 
-.example__photo {
-  background-color: $basic-grey;
-}
-
 .example__title {
   font-weight: 400;
   font-size: 36px;
@@ -56,6 +52,9 @@
 .example__result-big {
   font-weight: 400;
   font-size: 24px;
+  display: block;
+  text-align: center;
+  padding: 0 1em;
 }
 
 .example__result-small {
@@ -63,6 +62,14 @@
   font-weight: 400;
   font-size: 12px;
   color: $special_dark-grey;
+  display: block;
+  text-align: center;
+  position: absolute;
+  background-color: $basic_grey;
+  bottom: -1.7em;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 0 1em;
 }
 
 .example__bill {
@@ -87,7 +94,15 @@
 
 .example__results-data {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 32px;
+}
+
+.example__result {
+  border: 1px solid $special_grey;
+  border-radius: 3px;
+  position: relative;
+  padding: 0.5em 0;
 }
 
 .example__content {
@@ -102,5 +117,50 @@
     grid-template-columns: 40% 60%;
     width: 1220px;
     margin: 0 auto;
+  }
+}
+
+.example__slider {
+  position: relative;
+  height: 240px;
+
+  @media (min-width: $tablet-width) {
+    height: 520px;
+    width: 680px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.example__photo {
+  background-color: $basic_grey;
+
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+
+  &--before {
+    position: relative;
+    z-index: 3;
+    transition: width 0.2s;
+  }
+
+  &--after {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: flex-end;
+
+    @media (min-width: $tablet-width) {
+      justify-content: center;
+    }
+  }
+}
+
+.example__photo img {
+  @media (min-width: $tablet-width) {
+    width: auto;
+    height: auto;
   }
 }
