--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/programs";
 @import "blocks/steps";
 @import "blocks/example";
+@import "blocks/range-slider";
 @import "blocks/map";
 @import "blocks/page-footer";
 @import "blocks/copyright";
