стилизация блока Живой пример

--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -17,3 +17,15 @@
     display: inline;
   }
 }
+
+.br-tablet {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
