--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -41,9 +41,9 @@
     width: 708px;
   }
 
-  @media (min-width: $desktop-width) {
+  /* @media (min-width: $desktop-width) {
     width: 100%;
-  }
+  } */
 }
 
 .example__title {
@@ -60,11 +60,15 @@
   font-size: 14px;
   line-height: 18px;
   color: $special_dark-grey;
-  margin: 0;
+  margin: 0 0 25px 0;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 70px;
   }
 }
 
@@ -155,6 +159,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 32px;
+  margin-bottom: 36px;
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 162px 162px;
