--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -10,6 +10,7 @@
   margin: 0;
   display: grid;
   grid-gap: 20px;
+  margin-top: 20px;
 
   @media (min-width: $tablet-width) {
     grid-gap: 30px;
