--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -15,14 +15,14 @@
     width: 100%;
     height: 302px;
     background-color: #48474c;
-    background-image: url("../img/bg-mobile.webp");
+    background-image: url("../img/bg-mobile.png");
     background-position-x: calc(50% - 36px);
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/bg-mobile@2x.webp");
+      background-image: url("../img/bg-mobile@2x.png");
       background-size: 563px auto;
     }
 
