--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@ $special_grey2:#666666;
 $special_dark-grey:#444444;
 $special_dark-grey-2:#222222;
 $special_light-grey: #e7e7e7;
+$status_error: #ff8282;
 
 //viewports
 $tablet-width: 768px;
