--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -77,6 +77,7 @@
   font-size: 24px;
   display: block;
   text-align: center;
+  text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
@@ -88,6 +89,7 @@
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 12px;
+  line-height: 12px;
   color: $special_dark-grey;
   display: block;
   text-align: center;
@@ -95,7 +97,7 @@
   background-color: $basic_grey;
   padding: 0 1em;
   left: 50%;
-  bottom: -1.7em;
+  bottom: -1.4em;
   white-space: nowrap;
   transform: translate(-50%, 0);
 
@@ -117,6 +119,7 @@
   line-height: 20px;
   text-transform: uppercase;
   margin: 0;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     justify-self: end;
@@ -159,7 +162,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 32px;
-  margin-bottom: 36px;
+  margin-bottom: 35px;
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 162px 162px;
@@ -201,9 +204,12 @@
   }
 }
 
+.example__photos {
+  margin-top: 41px;
+}
+
 .example__photo {
   background-color: $basic_grey;
-
   overflow: hidden;
   width: 100%;
   height: 100%;
