--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -50,8 +50,9 @@
 .hero__title {
   font-weight: 400;
   font-size: 36px;
+  line-height: 36px;
   margin: 0;
-  padding: 27px 0;
+  padding: 27px 0 24px 0;
   text-align: center;
 
   @media (min-width: $tablet-width) {
@@ -68,6 +69,7 @@
   text-transform: uppercase;
   font-weight: 400;
   text-align: center;
+  margin-top: 0;
   margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
