--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -10,7 +10,7 @@
   margin: 0;
   display: grid;
   grid-gap: 20px;
-  margin-top: 20px;
+  margin-top: 22px;
 
   @media (min-width: $tablet-width) {
     grid-gap: 30px;
@@ -37,7 +37,7 @@
   line-height: 37px;
   font-weight: 400;
   margin: 0;
-  padding: 10px 0;
+  //padding: 10px 0;
   display: flex;
   align-items: center;
 
@@ -51,8 +51,10 @@
   content: "";
   background-image: url("../img/icon-cat-slim.svg");
   background-size: cover;
-  width: 50px;
-  height: 53px;
+  //width: 50px;
+  //height: 53px;
+  width: 52px;
+  height: 55px;
   display: inline-block;
   margin-right: 20px;
 
@@ -82,6 +84,9 @@
   height: 50px;
   display: inline-block;
   margin-right: 12px;
+  margin-left: -7px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 
   @media (min-width: $tablet-width) {
     width: 268px;
@@ -108,7 +113,7 @@
   line-height: 18px;
   color: $special_dark-grey;
   margin: 0 0 20px 0;
-  padding: 15px 0;
+  padding: 21px 0;
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
