--- a/source/sass/blocks/range-slider.scss
+++ b/source/sass/blocks/range-slider.scss
@@ -1,5 +1,5 @@
 .range-slider {
-  padding: 20px 0;
+  padding: 24px 0 36px 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -10,7 +10,8 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  padding: 5px;
+  padding: 0;
+  margin: 0;
   background: none;
   border: none;
   cursor: pointer;
@@ -18,7 +19,7 @@
 
 .range-slider__range {
   appearance: none;
-  margin: 0 1em;
+  margin: 0 1.1em;
   box-sizing: border-box;
   height: 14px;
   padding: 3px;
