--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -15,11 +15,11 @@
 
   @media (min-width: $tablet-width) {
     margin-right: 12px;
-    width: 60px;
+    width: 61px;
     height: 50px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     width: 70px;
     height: 60px;
   }
