--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -6,6 +6,7 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
     margin: 0 auto;
+    margin-top: 21px;
     width: 708px;
     justify-content: space-between;
     align-items: center;
