--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -14,6 +14,7 @@
 
   @media (min-width: $tablet-width) {
     grid-gap: 30px;
+    margin-top: 14px;
   }
 
   @media (min-width: $desktop-width) {
@@ -27,7 +28,7 @@
   padding: 20px;
 
   @media (min-width: $tablet-width) {
-    padding: 50px;
+    padding: 70px 45px 58px 52px;
   }
 }
 
@@ -37,13 +38,15 @@
   line-height: 37px;
   font-weight: 400;
   margin: 0;
-  //padding: 10px 0;
+  padding: 10px 0;
   display: flex;
   align-items: center;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     position: relative;
+    padding: 0;
+    margin-top: 6px;
   }
 }
 
@@ -62,8 +65,8 @@
     width: 200px;
     height: 212px;
     position: absolute;
-    right: 0;
-    top: 10px;
+    right: -3px;
+    top: 4px;
   }
 
   @media (min-width: $desktop-width) {
@@ -92,8 +95,8 @@
     width: 268px;
     height: 200px;
     position: absolute;
-    right: -30px;
-    top: 20px;
+    right: -27px;
+    top: 13px;
   }
 
   @media (min-width: $desktop-width) {
@@ -113,13 +116,16 @@
   line-height: 18px;
   color: $special_dark-grey;
   margin: 0 0 20px 0;
-  padding: 21px 0;
+  padding: 15px 0;
+
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 24px;
     border: none;
+    padding: 25px 0;
+    margin-bottom: 26px;
   }
 }
 
@@ -138,6 +144,10 @@
     display: inline-block;
     position: relative;
     left: 1em;
+
+    @media (min-width: $tablet-width) {
+      left: 1.25em;
+    }
   }
 
   @media (min-width: $tablet-width) {
