--- a/source/sass/blocks/steps.scss
+++ b/source/sass/blocks/steps.scss
@@ -1,5 +1,14 @@
 .steps {
   padding-bottom: 42px;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: 1px solid $special_light-grey;
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: $desktop-width) {
+    border: none;
+  }
 }
 
 .steps__title {
@@ -8,6 +17,12 @@
   line-height: 40px;
   margin: 0;
   padding: 27px 0 38px 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    padding: 43px 0 32px;
+  }
 }
 
 .steps__list {
@@ -24,7 +39,7 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
+    grid-gap: 37px 59px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -49,6 +64,10 @@
 
 .steps__descriptions {
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 12px 0;
+  }
 }
 
 .steps__item {
@@ -114,6 +133,7 @@
 
   .steps__item--consist::after {
     content: "1";
+    right: 20px;
   }
 
   .steps__item--form::after {
