--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -113,7 +113,7 @@
     background-color: #ffffff;
     font-size: 14px;
     padding: 0 0.5em;
-    bottom: -0.6em;
+    bottom: -0.5em;
   }
 
   @media (min-width: $desktop-width) {
@@ -134,6 +134,7 @@
     text-align: right;
     font-size: 20px;
     line-height: 28px;
+    margin-top: 8px;
   }
 
   @media (min-width: $desktop-width) {
@@ -183,6 +184,10 @@
   border-radius: 3px;
   position: relative;
   padding: 0.8em 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 1em 0 1.2em;
+  }
 }
 
 .example__content {
@@ -214,6 +219,11 @@
 
 .example__photos {
   margin-top: 41px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 49px;
+    background-color: $basic_grey;
+  }
 }
 
 .example__photo {
