--- a/source/sass/blocks/range-slider.scss
+++ b/source/sass/blocks/range-slider.scss
@@ -4,6 +4,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 21px 0 73px 0;
+  }
 }
 
 .range-slider__button {
