--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -63,6 +63,10 @@
     width: 420px;
     padding: 54px 0 42px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 105px 0 42px 0;
+  }
 }
 
 .hero__slogan {
@@ -93,15 +97,15 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 1220px;
-    min-height: 696px;
+    width: 1060px;
+    min-height: 577px;
   }
 }
 
 .hero__button {
   @media (min-width: $tablet-width) {
     font-size: 20px;
-    padding: 18px 22px;
+    padding: 18px 26px;
     display: inline-block;
     z-index: 2;
     position: relative;
@@ -119,7 +123,7 @@
   @media (min-width: $desktop-width) {
     position: absolute;
     z-index: 2;
-    left: 450px;
-    top: 30px;
+    left: 368px;
+    top: 25px;
   }
 }
