--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -20,6 +20,7 @@
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr;
     grid-gap: 80px;
+    margin-top: 80px;
   }
 }
 
@@ -29,6 +30,10 @@
 
   @media (min-width: $tablet-width) {
     padding: 70px 45px 58px 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 38px 45px 58px 52px;
   }
 }
 
@@ -72,7 +77,7 @@
     position: relative;
     width: 100px;
     height: 106px;
-    margin-right: 50px;
+    margin-right: 60px;
     top: 0;
     left: 0;
   }
@@ -102,9 +107,9 @@
     position: relative;
     width: 134px;
     height: 100px;
-    margin-right: 50px;
+    margin-right: 36px;
     top: 0;
-    left: 0;
+    left: -10px;
   }
 }
 
@@ -125,6 +130,11 @@
     border: none;
     padding: 25px 0;
     margin-bottom: 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+    padding: 38px 0 26px;
   }
 }
 
