--- a/source/sass/blocks/steps.scss
+++ b/source/sass/blocks/steps.scss
@@ -8,6 +8,7 @@
 
   @media (min-width: $desktop-width) {
     border: none;
+    padding-bottom: 0;
   }
 }
 
@@ -22,6 +23,10 @@
     font-size: 60px;
     line-height: 60px;
     padding: 43px 0 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 74px 0 32px;
   }
 }
 
@@ -46,6 +51,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(4, 1fr);
+    grid-gap: 75px;
   }
 }
 
