--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 27px 0;
+  padding: 30px 0 26px;
 
   @media (min-width: $tablet-width) {
     padding: 62px 40px;
