--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -1,6 +1,8 @@
 .page-form__title {
   font-weight: 400;
   font-size: 36px;
+  margin: 0;
+  padding: 25px 0 35px;
 }
 
 .page-form__subtitle {
@@ -8,7 +10,7 @@
   font-size: 24px;
   line-height: 26px;
   margin: 0;
-  padding: 25px 1em 25px 0;
+  padding: 25px 1em 35px 0;
   display: inline-block;
   background-color: #ffffff;
   position: relative;
@@ -23,7 +25,7 @@
 
   &--contacts {
     @media (max-width: $mobile-width-only) {
-      width: 185px;
+      width: 182px;
     }
   }
 }
@@ -32,6 +34,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
+  text-transform: uppercase;
+  margin: 0;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -58,7 +62,7 @@
 }
 
 .page-form__label {
-  margin-right: 10px;
+  margin-right: 15px;
   flex-grow: 0;
 
   @media (min-width: $tablet-width) {
@@ -145,14 +149,14 @@
   width: 100%;
   min-height: 150px;
   resize: none;
-  padding: 0.6em 1em;
+  padding: 0.6em 0.8em;
 
   @media (min-width: $desktop-width) {
     min-height: 174px;
   }
 
   &:focus {
-    padding: calc(0.6em - 1px) calc(1em - 1px);
+    padding: calc(0.6em - 1px) calc(0.8em - 1px);
   }
 }
 
@@ -167,6 +171,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
+  text-align: center;
+  margin-top: 6px;
 }
 
 .page-form__customer {
@@ -174,6 +180,7 @@
   //flex-direction: column;
   display: grid;
   grid-gap: 25px;
+  margin-top: 38px;
 
   @media (min-width: $desktop-width) {
     //flex-direction: row;
@@ -248,7 +255,7 @@
 
 .page-form__customer-extra {
   display: grid;
-  grid-gap: 14px;
+  grid-gap: 12px;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
@@ -362,11 +369,16 @@
   display: inline-block;
   margin-right: 1em;
   box-sizing: border-box;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: #ffffff;
   border: 1px solid $special_grey;
   border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .page-form__row:hover > .page-form__radio + .page-form__label::before {
@@ -377,11 +389,18 @@
   content: "";
   display: inline-block;
   margin-right: 20px;
-  width: 18px;
-  height: 18px;
+  width: 14px;
+  height: 14px;
   background-color: $basic_green;
   border-radius: 50%;
   position: absolute;
-  left: 11px;
-  top: 11px;
+  left: 8px;
+  top: 8px;
+
+  @media (min-width: $tablet-width) {
+    width: 18px;
+    height: 18px;
+    left: 11px;
+    top: 11px;
+  }
 }
