--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -43,6 +43,16 @@
   }
 }
 
+.map--form .map__container {
+  @media (min-width: $tablet-width) {
+    width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+  }
+}
+
 .map__iframe {
   border: none;
   width: 100%;
@@ -51,6 +61,10 @@
 
 .map {
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    background-color: $basic_grey;
+  }
 
   &--catalog {
     background-color: $basic_grey;
@@ -64,7 +78,7 @@
   padding: 30px 0 26px;
 
   @media (min-width: $tablet-width) {
-    padding: 62px 40px;
+    padding: 62px 2px;
   }
 
   @media (min-width: $desktop-width) {
