--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -3,6 +3,12 @@
   font-size: 36px;
   margin: 0;
   padding: 25px 0 35px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    padding: 57px 0 55px;
+  }
 }
 
 .page-form__subtitle {
@@ -19,7 +25,7 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    padding: 70px 1em;
+    padding: 75px 1em;
     left: -1em;
   }
 
@@ -66,7 +72,7 @@
   flex-grow: 0;
 
   @media (min-width: $tablet-width) {
-    margin-right: 15px;
+    margin-right: 18px;
   }
 }
 
@@ -151,8 +157,9 @@
   resize: none;
   padding: 0.6em 0.8em;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     min-height: 174px;
+    margin-bottom: -10px;
   }
 
   &:focus {
@@ -164,6 +171,11 @@
   border: none;
   font-size: 16px;
   line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    padding: 16px;
+  }
 }
 
 .page-form__note {
@@ -173,6 +185,12 @@
   line-height: 16px;
   text-align: center;
   margin-top: 6px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    text-align: left;
+    margin-top: 16px;
+  }
 }
 
 .page-form__customer {
@@ -181,6 +199,11 @@
   display: grid;
   grid-gap: 25px;
   margin-top: 38px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 65px;
+    grid-gap: 72px;
+  }
 
   @media (min-width: $desktop-width) {
     //flex-direction: row;
@@ -197,7 +220,7 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    width: 708px;
+    width: 630px;
   }
 
   @media (min-width: $desktop-width) {
@@ -234,8 +257,21 @@
 
   @media (min-width: $tablet-width) {
     border: 1px solid $special_light-grey;
-    padding: 24px;
+    padding: 24px 29px;
     //grid-gap: 20px;
+  }
+}
+
+.page-form__container {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 630px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
   }
 }
 
@@ -245,6 +281,7 @@
 
   @media (min-width: $tablet-width) {
     grid-gap: 20px;
+    margin-bottom: -10px;
   }
 
   @media (min-width: $desktop-width) {
@@ -259,25 +296,13 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px 60px;
+    grid-gap: 32px 60px;
+    margin-top: -18px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 80px;
-  }
-}
-
-.page-form__container {
-  width: 280px;
-  margin: 0 auto;
-
-  @media (min-width: $tablet-width) {
-    width: 708px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 1220px;
   }
 }
 
@@ -327,7 +352,7 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
     grid-gap: 60px;
-    padding: 50px 0;
+    padding: 54px 0 73px;
   }
 
   @media (min-width: $desktop-width) {
@@ -352,7 +377,7 @@
   left: 33%;
 
   @media (min-width: $tablet-width) {
-    top: 90px;
+    top: 97px;
     left: 0;
   }
 }
