--- a/source/sass/blocks/catalog-extra.scss
+++ b/source/sass/blocks/catalog-extra.scss
@@ -31,7 +31,7 @@
 } */
 
 .catalog-extra__item {
-  padding: 17px 0;
+  padding: 15px 0 17px;
   border-top: 1px solid $special_grey;
 
   &:last-of-type {
