--- a/source/sass/blocks/product-card-extra.scss
+++ b/source/sass/blocks/product-card-extra.scss
@@ -1,6 +1,6 @@
 .product-card-extra {
   display: grid;
-  grid-template-rows: minmax(30px, max-content) minmax(30px, max-content) 1fr;
+  grid-template-rows: minmax(26px, max-content) minmax(30px, max-content) 1fr;
   grid-template-columns: 1fr 1fr;
 
   @media (min-width: $tablet-width) {
@@ -34,6 +34,7 @@
 
 .product-card-extra__link {
   grid-column: span 2;
+  font-size: 16px;
 
   @media (min-width: $tablet-width) {
     grid-column: span 3;
