--- a/source/sass/blocks/product-promo.scss
+++ b/source/sass/blocks/product-promo.scss
@@ -1,7 +1,7 @@
 .product-promo {
   //background-color: $basic_green;
   height: 289px;
-  margin: 39px 0;
+  margin: 39px 0 33px;
   background-image: url("../img/gift-photo-mobile.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -49,7 +49,7 @@
     background-image: url("../img/icon-gift.svg");
     background-repeat: no-repeat;
     position: absolute;
-    top: 65px;
+    top: 57px;
     left: calc(50% - 39px);
 
     @media (min-width: $tablet-width) {
