--- a/source/sass/blocks/catalog-extra.scss
+++ b/source/sass/blocks/catalog-extra.scss
@@ -41,7 +41,7 @@
   @media (min-width: $tablet-width) {
     border-left: 1px solid $special_grey;
     border-right: 1px solid $special_grey;
-    padding: 27px 37px;
+    padding: 26px 37px 32px;
   }
 
   @media (min-width: $desktop-width) {
